--- a/lesson08/tablebuild.html
+++ b/lesson08/tablebuild.html
@@ -12,56 +12,36 @@
 </head>
 <body>
     <table>
-        <caption>Table 1: Animal's Average Gestational Period</caption>
+        <caption>Table 1: Account Feature Comparison</caption>
         <thead>
             <tr>
-                <th colspan="2" scope="colgroup">Animal's Average Gestational Period</th>
+                <th colspan="4" scope="colgroup">ACME Wildwest Services</th>
             </tr>
             <tr>
-                <th scope="col">Animal</th>
-                <th scope="col">Gestation</th>
+                <th scope="col" id="empty"></th>
+                <th scope="col">Basic</th>
+                <th scope="col">Premium</th>
+                <th scope="col">Deluxe</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>African Elephant</td>
-                <td>22 Months</td>
+                <td>Feature 1</td>
+                <td>✔️</td>
+                <td>✔️</td>
+                <td>✔️</td>
             </tr>
             <tr>
-                <td>Asian Elephant</td>
-                <td>18 Months</td>
+                <td>Feature 2</td>
+                <td>❌</td>
+                <td>✔️</td>
+                <td>✔️</td>
             </tr>
             <tr>
-                <td>Hamster</td>
-                <td>21 Days</td>
-            </tr>
-            <tr>
-                <td>Grizzly Bear</td>
-                <td>7 Months</td>
-            </tr>
-            <tr>
-                <td>Black Rhinoceros</td>
-                <td>15 Months</td>
-            </tr>
-            <tr>
-                <td>Virginia Opossum</td>
-                <td>12 Days</td>
-            </tr>
-            <tr>
-                <td>Walrus</td>
-                <td>15 Months</td>
-            </tr>
-            <tr>
-                <td>Wombat</td>
-                <td>30 Days</td>
-            </tr>
-            <tr>
-                <td>Alpaca</td>
-                <td>12 Months</td>
-            </tr>
-            <tr>
-                <td>Giraffe</td>
-                <td>14 Months</td>
+                <td>Feature 3</td>
+                <td>❌</td>
+                <td>❌</td>
+                <td>✔️</td>
             </tr>
         </tbody>
     </table>
