--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                         <a href="https://echlarson.github.io/wdd230/lesson07/bom.html">JS localStorage</a> |
                         <a href="https://echlarson.github.io/wdd230/chamber/discover.html">Discover</a></li>
                 <li>08: <a href="https://echlarson.github.io/wdd230/lesson08/tablebuild.html">Table Build</a> | 
-                        <a href="https://echlarson.github.io/wdd230/form-start/index.html">Form Start</a></li>
+                        <a href="https://echlarson.github.io/wdd230/form-start/index.html">Form Start</a> | 
+                        <a href="https://echlarson.github.io/wdd230/form.html">Form Build</a></li>
                 <li>09: <a href="#">Future Assignment</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
             </ul>
