chamber index button link

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,7 +43,7 @@
                     bustling night life and many local events to help you network. This site will provide you 
                     with local events, resources for business owners, and provide information on local 
                     business polices.</p>
-                <button class="button" onclick="https://echlarson.github.io/wdd230/chamber/join.html">Become a Member</button>
+                <button class="button" onclick="windows.location.href='https://echlarson.github.io/wdd230/chamber/join.html';">Become a Member</button>
             </article>
         </div>
         <div class="local">
