chamber join textarea add

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -99,7 +99,9 @@
                     <legend>Business (Organization)</legend>
                         <label>Business Name<input type="text" name="bname" required></label>
                         <label>Title (Position)<input type="text" name="title" pattern="[a-zA-Z_-]{7}" required></label>
-                        <label>Business Description<input type="text" name="bdes" required></label>
+                        <label>Business Description
+                            <textarea rows="5" cols="40" type="text" name="bdes" required></textarea>
+                        </label>
                 </fieldset>
                 <fieldset>
                     <legend>Membership Selection</legend>       
