--- a/chamber/join.html
+++ b/chamber/join.html
@@ -100,7 +100,7 @@
                         <label>Business Name<input type="text" name="bname" required></label>
                         <label>Title (Position)<input type="text" name="title" pattern="[a-zA-Z_-]{7}" required></label>
                         <label>Business Description
-                            <textarea rows="5" cols="40" type="text" name="bdes" required></textarea>
+                            <textarea rows="5" cols="40" name="bdes" required></textarea>
                         </label>
                 </fieldset>
                 <fieldset>
