--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,9 +26,9 @@
     <nav class="navigation">
         <button id="menu"></button>
         <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Advocacy</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/index.html">Home</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/discover.html" class="active">Discover</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/join.html">Join</a></li>
             <li><a href="#">Events</a></li>
         </ul>
     </nav>
