--- a/chamber/join.html
+++ b/chamber/join.html
@@ -105,10 +105,10 @@
                 </fieldset>
                 <fieldset>
                     <legend>Membership Selection</legend>       
-                        <label><input type="radio" name="mlevel" value="NPMembership">Non-Profit</label>
-                        <label><input type="radio" name="mlevel" value="Bronze">Bronze</label>
-                        <label><input type="radio" name="mlevel" value="Silver">Silver</label>
-                        <label><input type="radio" name="mlevel" value="Gold">Gold</label>
+                        <label id="radio"><input type="radio" name="mlevel" value="NPMembership">Non-Profit</label>
+                        <label id="radio"><input type="radio" name="mlevel" value="Bronze">Bronze</label>
+                        <label id="radio"><input type="radio" name="mlevel" value="Silver">Silver</label>
+                        <label id="radio"><input type="radio" name="mlevel" value="Gold">Gold</label>
                 </fieldset>
                 <input type="hidden" name="date" id="date">
                 <input type="submit" value="Apply for Membership">
