--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li>08: <a href="https://echlarson.github.io/wdd230/lesson08/tablebuild.html">Table Build</a> | 
                         <a href="https://echlarson.github.io/wdd230/form-start/index.html">Form Start</a> | 
                         <a href="https://echlarson.github.io/wdd230/form.html">Form Build</a></li>
-                <li>09: <a href="#">Future Assignment</a></li>
+                <li>09: <a href="https://echlarson.github.io/wdd230/lesson09/new-ward-member.json">New Ward Family</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
             </ul>
         </section>
