--- a/lesson09/prophets.html
+++ b/lesson09/prophets.html
@@ -20,7 +20,8 @@
         <div id="cards"></div>
       </main>
       <footer>
-        [Enter Your Name Here] | Latter-day Prophets
+        Elizabeth Chlarson | Latter-day Prophets
       </footer>
+      <script src="scripts/prophets.js"></script>
 </body>
 </html>
