--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="https://echlarson.github.io/wdd230/form-start/index.html">Form Start</a> | 
                         <a href="https://echlarson.github.io/wdd230/form.html">Form Build</a></li>
                 <li>09: <a href="https://echlarson.github.io/wdd230/lesson09/new-ward-member.json">New Ward Family</a> |
-                        <a href="https://echlarson.github.io/wdd230/lesson09/prophets.html"></a></li>
+                        <a href="https://echlarson.github.io/wdd230/lesson09/prophets.html">Prophets</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
             </ul>
         </section>
