Rubric Discover Fix

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,9 +4,9 @@
     <!--Meta Data-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course discover assignment. (Spring Semester 2024)">
+    <meta name="description" content="Discover page, additional demographic information about my city.">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Elizabeth Chlarson | WDD 230 | Riverstone Chamber of Commerce</title>
+    <title>Riverstone Chamber of Commerce | Discover</title>
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce | Discover">
     <meta property="og:type" content="website">
@@ -41,7 +41,7 @@
                 </ul>
             </div>
             <div id="dem">
-                <h3>Demographics</h3>
+                <h2>Demographics</h2>
                 <ul>
                     <li>Population of 17.6k People</li>
                     <li>Median Age of 37.8</li>
@@ -49,7 +49,7 @@
                 </ul>
             </div>
             <div id="events">
-                <h3>Upcomming Events</h3>
+                <h2>Upcomming Events</h2>
                 <ul>
                     <li>Corn Maze</li>
                     <li>Turkey Bowl</li>
@@ -57,7 +57,7 @@
                 </ul>
             </div>
             <div id="local">
-                <h3>Local Attractions</h3>
+                <h2>Local Attractions</h2>
                 <ul>
                     <li>Hiking Trail</li>
                     <li>Water Park</li>
@@ -66,42 +66,31 @@
             </div>
         </div>
         <div class="mArea">
-            <figure>
-                <source srcset="images/peppers-small.webp" media="(max-width: 290px)">
-                <source srcset="images/peppers-med.webp" media="(max-width: 600px)">
-                <img loading="lazy" src="images/peppers-large.webp" alt="Farmers Market" width="1000" height="666">
-                <figcaption>Picking Up Peppers at the Farmer's Market</figcaption>
-            </figure>
-            <figure>
-                <source srcset="images/pet-park-small.webp" media="(max-width: 290px)">
-                <source srcset="images/pet-park-med.webp" media="(max-width: 600px)">
+            <h1>Discover</h1>
+            <picture>
+                <img loading="lazy" src="images/peppers-med.webp" alt="Farmers Market" width="1000" height="666">
+                <p>Picking Up Peppers at the Farmer's Market</p>
+            </picture>
+            <picture>
                 <img loading="lazy" src="images/pet-park-large.webp" alt="Dog Park" width="1000" height="666">
-                <figcaption>Playing Fetch in the Local Park</figcaption>
-            </figure>
-            <figure>
-                <source srcset="images/polar-bear-small.webp" media="(max-width: 290px)">
-                <source srcset="images/polar-bear-med.webp" media="(max-width: 600px)">
+                <p>Playing Fetch in the Local Park</p>
+            </picture>
+            <picture>
                 <img loading="lazy" src="images/polar-bear-large.webp" alt="Zoo" width="1000" height="666">
-                <figcaption>Saying Hello to Our Polar Bear Freind at the Zoo</figcaption>
-            </figure>
-            <figure>
-                <source srcset="images/water-park-small.webp" media="(max-width: 290px)">
-                <source srcset="images/water-park-med.webp"  media="(max-width: 600px)">
+                <p>Saying Hello to Our Polar Bear Freind at the Zoo</p>
+            </picture>
+            <picture>
                 <img loading="lazy" src="images/water-park-large.webp" alt="Water Park" width="1000" height="666">
-                <figcaption>Check Out the Slide at Our Water Park</figcaption>
-            </figure>
-            <figure>
-                <source srcset="images/woman-gym-small.webp" media="(max-width: 290px)">
-                <source srcset="images/woman-gym-med.webp"  media="(max-width: 600px)">
+                <p>Check Out the Slide at Our Water Park</p>
+            </picture>
+            <picture>
                 <img loading="lazy" src="images/woman-gym-large.webp" alt="Gym" width="1000" height="666">
-                <figcaption>Breaking a Sweat at the Gym</figcaption>
-            </figure>
-            <figure>
-                <source srcset="images/bumper-cars-small.webp" media="(max-width: 290px)">
-                <source srcset="images/bumper-cars-med.webp" media="(max-width: 600px)">
+                <p>Breaking a Sweat at the Gym</p>
+            </picture>
+            <picture>
                 <img loading="lazy" src="images/bumper-cars-large.webp" alt="Amusement Park" width="1000" height="666">
-                <figcaption>1.. 2.. 3.. GO!</figcaption>
-            </figure>
+                <p>1.. 2.. 3.. GO!</p>
+            </picture>
         </div>
     </main>
     <footer>
