--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul>
+            <div id="live-links"></div>
+            <!--<ul>
                 <li>01: <a href="https://echlarson.github.io/wdd230/lesson01/holygrail.html">Holy Grail Layout</a></li>
                 <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design</a> |
                         <a href="https://echlarson.github.io/wdd230/lesson02/media-query.html">Media Query Example</a> |
-                        <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li> 
+                        <a href="https://echlarson.github.io/wdd230/lesson02/design-principles.html">Design Principles</a></li>
                 <li>03: <a href="images/css-combinators-screenshot.png">CSS Combinators Exercise</a> | 
                         <a href="https://codepen.io/EChlarson/pen/BaeaayL?editors=1100">CSS Pseudo-elements</a> | 
                         <a href="https://codepen.io/EChlarson/pen/xxNxgYN">Responsive Navigation</a></li>
@@ -61,13 +62,13 @@
                 <li>07: <a href="https://echlarson.github.io/wdd230/lesson07/lazyload.html">Lazy Load</a> |
                         <a href="https://echlarson.github.io/wdd230/lesson07/bom.html">JS localStorage</a> |
                         <a href="https://echlarson.github.io/wdd230/chamber/discover.html">Discover</a></li>
-                <li>08: <a href="https://echlarson.github.io/wdd230/lesson08/tablebuild.html">Table Build</a> | 
+                <li>08: <a href="https://echlarson.github.io/wdd230/lesson08/tablebuild.html">c</a> | 
                         <a href="https://echlarson.github.io/wdd230/form-start/index.html">Form Start</a> | 
                         <a href="https://echlarson.github.io/wdd230/form.html">Form Build</a></li>
                 <li>09: <a href="https://echlarson.github.io/wdd230/lesson09/new-ward-member.json">New Ward Family</a> |
                         <a href="https://echlarson.github.io/wdd230/lesson09/prophets.html">Prophets</a></li>
                 <li>10: <a href="#">Future Assignment</a></li>
-            </ul>
+            </ul>-->
         </section>
         <section class="card">
             <h3>Information</h3>
@@ -90,5 +91,6 @@
     <script src="scripts/last-modified.js"></script>
     <script src="scripts/windchill.js"></script>
     <script src="scripts/page-visit-counter.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 </html>
