--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
-            <div id="live-links"></div>
+            <ul id="weeks">
+
+                <!--links.json-->
+
+            </ul>
             <!--<ul>
                 <li>01: <a href="https://echlarson.github.io/wdd230/lesson01/holygrail.html">Holy Grail Layout</a></li>
                 <li>02: <a href="https://echlarson.github.io/wdd230/lesson02/design.html">Design</a> |
