nav fix and final members.js

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -29,7 +29,7 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/index.html">Home</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/discover.html" class="active">Discover</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/join.html">Join</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/members.html">Directory</a></li>
         </ul>
     </nav>
     <main>
