--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,12 +27,13 @@
     <nav class="navigation">
         <button id="menu"></button>
         <ul>
-            <li><a href="https://echlarson.github.io/wdd230/chamber/index.html" class="active">Home</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/index.html">Home</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/discover.html">Discover</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/join.html">Join</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/members.html" class="active">Directory</a></li>
         </ul>
     </nav>
+    <h1>Member Directory</h1>
     <main id="cards">
         <!--JSON HERE-->   
     </main>
