--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/index.html" class="active">Home</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/discover.html">Discover</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/join.html">Join</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="https://echlarson.github.io/wdd230/chamber/members.html">Directory</a></li>
         </ul>
     </nav>
     <main>
