title and des update

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,9 +4,9 @@
     <!--Meta Data-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course chamber assignment. (Spring Semester 2024)">
+    <meta name="description" content="Chamber of commerce member directory page">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Elizabeth Chlarson | WDD 230 | Riverstone Chamber of Commerce</title>
+    <title>WDD 230 | Riverstone Chamber of Commerce | Directory</title>
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
     <meta property="og:type" content="website">
