02 Assignment: Design Principles Document (rubric changes)

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's lesson 2 assignment. (Spring Semester 2024)">
+    <meta name="description" content="Elizabeth Chlarson - WDD230 - Design principles site">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
+    <title>Design Principles</title>
     <!--Responsive Style Sheets-->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
