--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -4,9 +4,9 @@
     <!--Meta Data-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course assignment portal. (Spring Semester 2024)">
+    <meta name="description" content="Elizabeth Chlarson - WDD230 - Chamber Site Plan">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Elizabeth Chlarson | WDD 230 | Web Frontend Development</title>
+    <title>Chamber Site Plan</title>
     <!--Open Graph Meta Tags-->
     <!--Stylesheets-->
     <link rel="stylesheet" href="styles/normalize.css">
