--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="#">
+    <meta property="og:image" content="images/polar-bear-small.webp">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
     <!--Stylesheets-->
     <link rel="icon" href="favicon.ico">
@@ -23,6 +23,7 @@
     <div id="mode">🌔</div>
     <header>
         <img src="images/Logo.webp" alt="Logo">
+        <h1>Riverstone Chamber of Commerce</h1>
     </header>
     <nav class="navigation">
         <button id="menu"></button>
