--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49097.820750481864!2d-90.27312725732085!3d39.725861233882846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87dfebe054790b3d%3A0x3bad0b9aa5c24ede!2sJacksonville%2C%20IL%2062650!5e0!3m2!1sen!2sus!4v1715303199295!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
-        <p>©2024 | Elizabeth Chlarson | Illinois</p>
+        <p><span id="coRight"></span> | Elizabeth Chlarson | Illinois</p>
         <label> Last Modified: <span id="last-modification">Mon May 13 2024 20:00:54 GMT-0500 (Central Daylight Time)</span></label>
     </footer>
     <script src="scripts/hamburger.js"></script>
-    <script src="scripts/last-modified.js"></script>
+    <script src="scripts/getdates.js"></script>
     <script src="scripts/windchill.js"></script>
     <script src="scripts/page-visit-counter.js"></script>
     <script src="scripts/links.js"></script>
