--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,6 +22,7 @@
     <div id="mode">🌔</div>
     <header>
         <img src="images/Logo.webp" alt="Logo">
+        <h1>Riverstone Chamber of Commerce</h1>
     </header>
     <nav class="navigation">
         <button id="menu"></button>
