--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="card">
             <h3>Information</h3>
                 <ul>
-                    <li><span id=temp></span></li>
+                    <li id="lOne"><img id="weather-icon" src="" alt=""> | <span id=temp></span> | <span id=desc></span></li>
                     <li><span id=wSpeed></span></li>
                     <li><span id=windchill></span></li>
                 </ul>
@@ -71,8 +71,8 @@
     </footer>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/getdates.js"></script>
-    <script src="scripts/windchill.js"></script>
     <script src="scripts/page-visit-counter.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 </html>
