--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,10 +55,10 @@
                     soluta consectetur inventore, reiciendis illum.</p>
             </article>
             <article>
-                <h3>Weather</h3>
+                <h3>Current Weather</h3>
                 <div class="weather">
                     <ul>
-                        <li><span id=temp></span></li>
+                        <li id="lOne"><img id="weather-icon" src="" alt="">|<span id=temp></span>|<span id=desc></span></li>
                         <li><span id=wSpeed></span></li>
                         <li><span id=windchill></span></li>
                     </ul>
@@ -66,6 +66,11 @@
                         <li id="visits"><span class="label">Number of Visits: </span><span class="visits"></span></li>
                     </ul>
                 </div>
+            </article>
+            <article>
+                <h3>6am Forcast</h3>
+                <span id="fData"></span>
+                <!--forcastData Here-->
             </article>
         </div>
         <div class="boxes">
@@ -124,7 +129,7 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/last-modified.js"></script>
     <script src="scripts/mode.js"></script>
-    <script src="scripts/windchill.js"></script>
+    <script src="scripts/weather.js"></script>
     <script src="scripts/page-visit-counter.js"></script>
 </body>
 </html>
