--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,7 @@
                     </ul>
                 </div>
             </article>
-            <article>
+            <article class="color">
                 <h3>6am Forcast</h3>
                 <span id="fData"></span>
                 <!--forcastData Here-->
