--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,6 +34,13 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/members.html">Directory</a></li>
         </ul>
     </nav>
+    <!--Anouncment Bar -->
+    <div class="announcement">
+        <div class="announcement_container">
+            <p class="announcement_text">We are delighted to extend an invitation to you for this Wednesday's Chamber of Commerce Meet and Greet event at 7pm.</p>
+            <button class="announcement_btn" onclick="hideAnnouncement()"></button>
+        </div>
+    </div>
     <main>
         <div class="hero">
             <picture><img src="images/architecture-1868667_1280.jpg" alt="img"></picture>
@@ -131,5 +138,6 @@
     <script src="scripts/mode.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/page-visit-counter.js"></script>
+    <script src="scripts/announcement.js"></script>
 </body>
 </html>
