--- a/hamburgerTest/hamburgerTest.html
+++ b/hamburgerTest/hamburgerTest.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="styles/base.css">    
 </head>
 <body>
-    <!--Light to Dark Mode-->
     <header>
         <nav class="navbar">
             <a href="#" class="nav-branding">Riverstone Chamber of Commerce</a>
@@ -28,7 +27,17 @@
                 <span class="bar"></span>
             </div>
         </nav>
-    </header>
+    </header>   
+        
+    <!--Anouncment Bar Test-->
+    <div class="announcement">
+        <div class="announcement_container">
+            <p class="announcement_text">We invite you to attend the chamber of commerce meet and greet on Wednesday at 7:00 p.m.</p>
+            <button class="announcement_btn" onclick="hideAnnouncement()"></button>
+        </div>
+    </div>
+
+
     <main>
         <div class="hero">
             <picture>
@@ -43,5 +52,6 @@
 
     </main>
     <script src="scripts/hamburgerTest.js"></script>
+    <script src="scripts/announcement.js"></script>
 </body>
 </html>
