--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/polar-bear-small.webp">
+    <meta property="og:image" content="https://echlarson.github.io/wdd230/chamber/images/polar-bear-large.webp">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
     <!--Stylesheets-->
     <link rel="icon" href="favicon.ico">
@@ -65,7 +65,7 @@
                 <h3>Current Weather</h3>
                 <div class="weather">
                     <ul>
-                        <li id="lOne"><img id="weather-icon" src="" alt="">|<span id=temp></span>|<span id=desc></span></li>
+                        <li id="lOne"><img id="weather-icon">|<span id=temp></span>|<span id=desc></span></li>
                         <li><span id=wSpeed></span></li>
                         <li><span id=windchill></span></li>
                     </ul>
