html error fix img

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,7 +65,7 @@
                 <h3>Current Weather</h3>
                 <div class="weather">
                     <ul>
-                        <li id="lOne"><img id="weather-icon">|<span id=temp></span>|<span id=desc></span></li>
+                        <li id="lOne"><img id="weather-icon" alt="#" src="#">|<span id=temp></span>|<span id=desc></span></li>
                         <li><span id=wSpeed></span></li>
                         <li><span id=windchill></span></li>
                     </ul>
