index fix error

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="card">
             <h3>Information</h3>
                 <ul>
-                    <li id="lOne"><img id="weather-icon" src="" alt="">|<span id=temp></span>|<span id=desc></span></li>
+                    <li id="lOne"><img id="weather-icon" src="#" alt="#">|<span id=temp></span>|<span id=desc></span></li>
                     <li><span id=wSpeed></span></li>
                     <li><span id=windchill></span></li>
                 </ul>
