--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
                 <h2>Current Weather</h2>
                 <div class="weather">
                     <ul>
-                        <li id="lOne"><img id="weather-icon" alt="#" src="#">|<span id=temp></span>|<span id=desc></span></li>
+                        <li id="lOne"><img id="weather-icon" alt="#" src="#"> | <span id=temp></span> | <span id=desc></span></li>
                         <li><span id=wSpeed></span></li>
                         <li><span id=windchill></span></li>
                     </ul>
@@ -133,6 +133,20 @@
                     <button class="button">Book a Room</button>
                 </div>
             </article>
+        </div>
+
+        <div class="news">
+            <div>
+                <h2>Stay Connected with Your Business Community!</h2>
+                <p>Don’t miss out on the latest updates, events, and opportunities from Jacksonville Chamber 
+                of Commerce. Sign up for our newsletter today to stay informed and connected with local 
+                business news, networking events, workshops, and much more!</p>
+            </div>
+            <form id="newsletterForm">
+                <label for="name">Name:<input type="text" id="name" name="name" required></label>
+                <label for="email" id="emailInput" placeholder="Your Email Address">Email:<input type="email" id="email" name="email" required></label>
+                <input type="submit" value="Subscribe">
+            </form> 
         </div>
     
     
