--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chamber of commerce member directory page">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>WDD 230 | Riverstone Chamber of Commerce | Directory</title>
+    <title>WDD 230 | Jacksonville Chamber of Commerce | Directory</title>
     <!--Open Graph Meta Tags-->
-    <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
+    <meta property="og:title" content="WDD 230 | Jacksonville Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
@@ -19,11 +19,10 @@
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
-<body>
+<body id="directory">
     <div id="mode">🌔</div>
     <header>
-        <img src="images/Logo.webp" alt="Logo">
-        <h1>Riverstone Chamber of Commerce</h1>
+        <img src="images/jacksonvilleLogo.jpg" alt="Logo">
     </header>
     <nav class="navigation">
         <button id="menu"></button>
@@ -34,12 +33,12 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/directory.html" class="active">Directory</a></li>
         </ul>
     </nav>
-    <h1>Member Directory</h1>
+    <h1>Jacksonville Chamber of Commerce Member Directory</h1>
     <main id="cards">
         <!--JSON HERE-->   
     </main>
     <footer>
-        <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
+        <p>Jacksonville Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
         <!--Social Media Links-->
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.webp" alt="Facebook"></a>
