--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,10 +32,16 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/join.html">Join</a></li>
             <li><a href="https://echlarson.github.io/wdd230/chamber/directory.html" class="active">Directory</a></li>
         </ul>
+        <div class="toggleView">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
     </nav>
     <h1>Jacksonville Chamber of Commerce Member Directory</h1>
-    <main id="cards">
-        <!--JSON HERE-->   
+    <main>
+        <div id="gridCards"></div>
+        <!--JSON HERE-->
+        <div id="listCards"></div>
     </main>
     <footer>
         <p>Jacksonville Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
