--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,8 +33,8 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/directory.html" class="active">Directory</a></li>
         </ul>
         <div class="toggleView">
-            <button id="grid">Grid</button>
-            <button id="list">List</button>
+            <button id="grid" type="button" onclick="showGrid()">Grid</button>
+            <button id="list" type="button" onclick="showList()">List</button>
         </div>
     </nav>
     <h1>Jacksonville Chamber of Commerce Member Directory</h1>
