color fix discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover page, additional demographic information about my city.">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Riverstone Chamber of Commerce | Discover</title>
+    <title>Jacksonville Chamber of Commerce | Discover</title>
     <!--Open Graph Meta Tags-->
-    <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce | Discover">
+    <meta property="og:title" content="WDD 230 | Jacksonville Chamber of Commerce | Discover">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/discover.html">
@@ -21,8 +21,7 @@
 <body id="discover">
     <div id="mode">🌔</div>
     <header>
-        <img src="images/Logo.webp" alt="Logo">
-        <h1>Riverstone Chamber of Commerce</h1>
+        <img src="images/jacksonvilleLogo.jpg" alt="Logo">
     </header>
     <nav class="navigation">
         <button id="menu"></button>
@@ -67,7 +66,7 @@
             </div>
         </div>
         <div class="mArea">
-            <h1>Discover</h1>
+            <h1>Jacksonville Chamber of Commerce</h1>
             <picture>
                 <img loading="lazy" src="images/peppers-med.webp" alt="Farmers Market" width="1000" height="666">
                 <p>Picking Up Peppers at the Farmer's Market</p>
@@ -95,7 +94,7 @@
         </div>
     </main>
     <footer>
-        <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
+        <p>Jacksonville Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
         <!--Social Media Links-->
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.webp" alt="Facebook"></a>
