color fix join and ty page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course chamber assignment. (Spring Semester 2024)">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Elizabeth Chlarson | WDD 230 | Riverstone Chamber of Commerce | Join</title>
+    <title>Elizabeth Chlarson | WDD 230 | Jacksonville Chamber of Commerce | Join</title>
     <!--Open Graph Meta Tags-->
-    <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
+    <meta property="og:title" content="WDD 230 | Jacksonville Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
@@ -22,8 +22,7 @@
 <body>
     <div id="mode">🌔</div>
     <header>
-        <img src="images/Logo.webp" alt="Logo">
-        <h1>Riverstone Chamber of Commerce</h1>
+        <img src="images/jacksonvilleLogo.jpg" alt="Logo">
     </header>
     <nav class="navigation">
         <button id="menu"></button>
@@ -35,13 +34,14 @@
         </ul>
     </nav>
     <main class="tpage">
+        <h1>Jacksonville Chamber of Commerce</h1>
         <h2>Thank You!</h2>
-        <p>Thank you for joining the Riverstone Chamber of Commerce! We’re excited to have you as a member. You’ll receive a welcome email shortly with more information about your benefits and upcoming events.</p>
+        <p>Thank you for joining the Jacksonville Chamber of Commerce! We’re excited to have you as a member. You’ll receive a welcome email shortly with more information about your benefits and upcoming events.</p>
         <p>Your information was recived on <span id=date></span>.</p>
         <h3>Welcome aboard!</h3>
     </main>
     <footer>
-        <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
+        <p>Jacksonville Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
         <!--Social Media Links-->
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.webp" alt="Facebook"></a>
