--- a/chamber/join.html
+++ b/chamber/join.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 230 - Web Frontend Development, Elizabeth Chlarson's course chamber assignment. (Spring Semester 2024)">
     <meta name="author" content="Elizabeth Chlarson">
-    <title>Elizabeth Chlarson | WDD 230 | Riverstone Chamber of Commerce | Join</title>
+    <title>Elizabeth Chlarson | WDD 230 | Jacksonville Chamber of Commerce | Join</title>
     <!--Open Graph Meta Tags-->
-    <meta property="og:title" content="WDD 230 | Riverstone Chamber of Commerce">
+    <meta property="og:title" content="WDD 230 | Jacksonville Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="#">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
@@ -22,8 +22,7 @@
 <body>
     <div id="mode">🌔</div>
     <header>
-        <img src="images/Logo.webp" alt="Logo">
-        <h1>Riverstone Chamber of Commerce</h1>
+        <img src="images/jacksonvilleLogo.jpg" alt="Logo">
     </header>
     <nav class="navigation">
         <button id="menu"></button>
@@ -34,6 +33,7 @@
             <li><a href="https://echlarson.github.io/wdd230/chamber/directory.html">Directory</a></li>
         </ul>
     </nav>
+    <h1>Jacksonville Chamber of Commerce</h1>
     <h2>Membership Level Descriptions</h2>
     <main class="jpage">
         <!-- Memberships -- First Column-->
@@ -117,7 +117,7 @@
         </div>
     </main>
     <footer>
-        <p>Riverstone Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
+        <p>Jacksonville Chamber of Commerce <br>Elizabeth Chlarson | WDD230 Project</p>
         <!--Social Media Links-->
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.webp" alt="Facebook"></a>
