update a few errors message from chelsea to yvette

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -68,27 +68,27 @@
         <div class="mArea">
             <h1>Jacksonville Chamber of Commerce</h1>
             <picture>
-                <img loading="lazy" src="images/peppers-med.webp" alt="Farmers Market" width="1000" height="666">
+                <img loading="lazy" src="images/peppers-med.webp" alt="Farmers Market"> <!-- width="1000" height="666"-->
                 <p>Picking Up Peppers at the Farmer's Market</p>
             </picture>
             <picture>
-                <img loading="lazy" src="images/pet-park-large.webp" alt="Dog Park" width="1000" height="666">
+                <img loading="lazy" src="images/pet-park-large.webp" alt="Dog Park"> <!-- width="1000" height="666"-->
                 <p>Playing Fetch in the Local Park</p>
             </picture>
             <picture>
-                <img loading="lazy" src="images/polar-bear-large.webp" alt="Zoo" width="1000" height="666">
+                <img loading="lazy" src="images/polar-bear-large.webp" alt="Zoo"> <!-- width="1000" height="666"-->
                 <p>Saying Hello to Our Polar Bear Freind at the Zoo</p>
             </picture>
             <picture>
-                <img loading="lazy" src="images/water-park-large.webp" alt="Water Park" width="1000" height="666">
+                <img loading="lazy" src="images/water-park-large.webp" alt="Water Park"> <!-- width="1000" height="666"-->
                 <p>Check Out the Slide at Our Water Park</p>
             </picture>
             <picture>
-                <img loading="lazy" src="images/woman-gym-large.webp" alt="Gym" width="1000" height="666">
+                <img loading="lazy" src="images/woman-gym-large.webp" alt="Gym"> <!-- width="1000" height="666"-->
                 <p>Breaking a Sweat at the Gym</p>
             </picture>
             <picture>
-                <img loading="lazy" src="images/bumper-cars-large.webp" alt="Amusement Park" width="1000" height="666">
+                <img loading="lazy" src="images/bumper-cars-large.webp" alt="Amusement Park"> <!-- width="1000" height="666"-->
                 <p>1.. 2.. 3.. GO!</p>
             </picture>
         </div>
