--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/john/10?lang=eng&id=p14-p15#p14" target="_blank">Scripture</a></li>
         </ul>
     </nav>
-    <main>
+    <main id="index">
         <div class="hero">
             <picture>
                 <source srcset="images/nauvoo-temple-small.webp" media="(max-width: 500px)">
