--- a/form.html
+++ b/form.html
@@ -34,8 +34,10 @@
             <fieldset>
                 <legend>User Information</legend>
                     <label>Username*<input type="text" name="uname" required></label>
-                    <label>Password*<input type="password" id="password" name="password" pattern="[A-Za-z]{8}" required></label>
-                    <label>Confirm Password*<input type="password" id="cpassword" name="cpassword"></label>
+                    <label>Password*<input type="password" id="password" name="password" pattern="[A-Za-z]{8}" required
+                        title="8 or more, upper and lower case characters with no numbers or special characters."></label>
+                    <label>Confirm Password*<input type="password" id="cpassword" name="cpassword" required
+                        title="Retype your password to confirm."></label>
                     <label>Email*<input type="email" name="email" pattern="[a-zA-Z0-9_.\-]+@byui.edu" placeholder="Enter a Valid byui.edu Email Address" required></label>
             </fieldset>
             <label>Page Rating<input type="range" name="rate" min="0" max="10" value="0" step="1" list="ratelist"> </label>
