--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -10,7 +10,7 @@
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 | Jacksonville Chamber of Commerce | Discover">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="#">
+    <meta property="og:image" content="https://chambermaster.blob.core.windows.net/userfiles/UserFiles/chambers/3277/CMS/Jacksonville-Chamber-Color(1)-w6000.jpg">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/discover.html">
     <!--Stylesheets-->
     <link rel="stylesheet" href="styles/normalize.css">
