--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <!--Open Graph Meta Tags-->
     <meta property="og:title" content="WDD 230 | Jacksonville Chamber of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://echlarson.github.io/wdd230/chamber/images/polar-bear-large.webp">
+    <meta property="og:image" content="https://chambermaster.blob.core.windows.net/userfiles/UserFiles/chambers/3277/CMS/Jacksonville-Chamber-Color(1)-w6000.jpg">
     <meta property="og:url" content="https://echlarson.github.io/wdd230/chamber/index.html">
     <!--Stylesheets-->
     <link rel="icon" href="favicon.ico">
