--- a/scootes/home.html
+++ b/scootes/home.html
@@ -43,25 +43,27 @@
             <img src="images/honda_color_hero.png">
         </div>
         <div id="local">
-            <h2>Local Weather</h2>
-            <p>Plan your perfect rental adventure.</p>
-            <div id="localGrid">
-                <section>
-                    <h3>Current Weather</h3>
-                    <p>Temerature<br>
-                        Humidity<br>
-                        Description<br>
-                        Icon</p>
-                </section>
-                <section>
-                    <h3>Tomorrows Forecast</h3>
-                    <p>Temerature<br>
-                        Humidity<br>
-                        Description<br>
-                        Icon</p>
-                </section>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1720754292053!5m2!1sen!2sus" width="600" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div>
+                <h2>Local Weather</h2>
+                <p>Plan your perfect rental adventure.</p>
+                <div id="localGrid">
+                    <section>
+                        <h3>Current Weather</h3>
+                        <p><span id="curTemp"></span><br>
+                            <span id="curHumidity"><br>
+                            <span id="curDesc"></span></p>
+                        <img id="curIcon" alt="#" src="#">
+                    </section>
+                    <section>
+                        <h3>Tomorrows Forecast</h3>
+                        <p><span id="futTemp"></span><br>
+                            <span id="futHumidity"><br>
+                            <span id="futDesc"></span></p>
+                        <img id="futIcon" alt="#" src="#">
+                    </section>
+                </div>
             </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1720754292053!5m2!1sen!2sus" width="600" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>        
         <div id="options">
             <section>
@@ -92,10 +94,10 @@
     </main>
     <footer>
         <div>
-            <h3>Scootes</h3>
-            <p>Phone<br>
-                Address<br>
-                Business Hours</p>
+            <h3>Scootes © 2024</h3>
+            <p>☎️ +52 800 123 4567<br>
+                📍Comercial Punta Langosta, Av. Rafael E. Melgar 599, Centro, 77600 Cozumel, Q.R., Mexico<br>
+                ⏰Open 7 Days a week, from 8AM - 7PM.</p>
         </div>
         <nav class="social-links">
             <a href="https://www.facebook.com/"><img src="images/facebook-icon.webp" alt="Facebook"></a>
@@ -103,5 +105,6 @@
             <a href="https://www.tiktok.com"><img src="images/tiktok-icon.webp" alt="TikTok"></a>
         </nav>
     </footer>
+    <script src="scripts/weather.js"></script>
 </body>
 </html>
